# teamshuffler

./: Cargo.toml  LICENSE.md  README.md
src/: app.rs  lib.rs  main.rs
src/declarations/: mod.rs  team.rs  weight_member.rs
src/subcommands/: add_member_subcommand.rs  add_team_subcommand.rs  delete_member_subcommand.rs  delete_team_subcommand.rs  mod.rs  shuffle_team_subcommand.rs
