[package]
name = "teamshuffler"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.0", features = ["derive"] }
home = "0.5.3"
serde_json = "1.0"
rand = "0.8"